--- a/src/pages/ProductDetails/ProductDetails.css
+++ b/src/pages/ProductDetails/ProductDetails.css
@@ -1,13 +1,157 @@
-.main_container{
-    display: flex;
-    gap: 2rem;
-    justify-content: space-between;
-    padding: 2rem;
+.main_container {
+  display: flex;
+  gap: 2rem;
+  justify-content: space-between;
+  padding: 2rem;
 }
-.left_top{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: .5rem;
+.details_left {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 50%;
+}
+.left_top {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.left_bottom {
+  border: 1px solid rgb(250, 237, 237);
+  min-height: 15rem;
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+}
+
+.nav-pills {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-link {
+  color: black !important;
+  cursor: pointer;
+  border: 1px solid rgb(250, 237, 237) !important;
+  width: 14rem;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  background-color: rgb(250, 237, 237) !important;
+  border-radius: 1rem !important;
+  height: 2rem;
+}
+.nav-link.active {
+  background-color: rgb(241, 56, 56) !important;
+  color: white !important;
+}
+.tab-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+/* Right Part styling */
+
+.details_right {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 50%;
+}
+.product_details_top {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.p_tags {
+  display: flex;
+  justify-content: start;
+  gap: 1rem;
+}
+.p_tags span {
+  border: 1px solid;
+  border-radius: 0.5rem;
+  padding: 0.2rem 0.5rem;
+}
+.icon_img {
+  height: 1rem;
+  width: 1rem;
+}
+.badge {
+  border-radius: 1.25rem !important;
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  max-width: 3rem;
+  gap: 0.2rem;
+}
+.reviews {
+  display: flex;
+  gap: 1rem;
+  justify-content: start;
+  align-items: center;
+}
+.saller_details {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 1rem;
+}
+.accordion-button {
+  padding: 0.5rem 1.25rem !important;
+  background-color: white !important;
+  color: black !important;
+}
+.accordion-button:focus {
+  background-color: white !important;
+  border-color: white !important;
+  box-shadow: none !important;
+}
+.accordion-body {
+  color: gray;
+}
+.acc_body_itm {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  column-gap: 5rem;
+}
+
+.f_b_t_list {
+  border: 1px solid rgb(250, 237, 237);
+  border-radius: 0.5rem;
+  padding: 1rem;
+}
+.card-img-top {
+  width: 60% !important;
+}
+.card {
+  align-items: center;
+  justify-content: center;
+}
+.pro_oth_details {
+  display: flex;
+  flex-direction: column;
+  gap: 0.6rem;
+}
+.checkbox_round {
+  width: 1.3em;
+  height: 1.3em;
+  background-color: white;
+  border-radius: 50%;
+  vertical-align: middle;
+  border: 1px solid rgb(241, 56, 56);
+  appearance: none;
+  -webkit-appearance: none;
+  outline: none;
+  cursor: pointer;
+}
+.checkbox_round:checked {
+    background-color: rgb(241, 56, 56);
 }
